--- a/client/src/utilities.css
+++ b/client/src/utilities.css
@@ -1,22 +1,3 @@
-/**
-* Welcome to your ✨𝔲𝔱𝔦𝔩𝔦𝔱𝔶 𝔰𝔱𝔶𝔩𝔢𝔰✨!
-* This file includes utility classes that are super simple
-* and can be used to add general styles; variable definitions
-* for colors; and styles to html, body, and other high level
-* DOMs.
-* 
-* All utility classes start with a `u-` and all do
-* one basic CSS thing (for example, making the font-weight
-* 600 for bolding) or are super generic.
-* 
-* This is 𝙉𝙊𝙏 the place to define classes for components or
-* do rigorous styling. You shoud not need to change this file
-* much after initial creation.
-*/
-
-/* TODO: REPLACE WITH YOUR OWN FONT! */
-@import url("https://fonts.googleapis.com/css2?family=Mulish:wght@400;700;800;900&display=swap");
-
 :root {
     --dark: #202020;
 
@@ -37,7 +18,7 @@ h1 {
 }
 
 body {
-    font-family: "Mulish", sans-serif;
+    font-family: "Segoe UI", "San Francisco", "Arial", sans-serif;
 }
 
 p {
