--- a/client/src/utilities.css
+++ b/client/src/utilities.css
@@ -25,6 +25,10 @@ h1 {
     font-size: 1.6em;
 }
 
+h2 {
+    font-size: 1.2em;
+}
+
 body {
     font-family: "Segoe UI", "San Francisco", "Arial", sans-serif;
 }
