--- a/client/src/components/modules/Menu.css
+++ b/client/src/components/modules/Menu.css
@@ -4,15 +4,29 @@
     display: flex;
     flex-direction: column;
     align-content: center;
+    width: 240px;
+}
+
+.menu-button, .menu-font {
+    border: none;
+    border-radius: 0px;
+    background-repeat: no-repeat;
+    background-color: transparent;
 }
 
 .menu-button {
-    border: none;
-    border-radius: 0px;
+    background-color: transparent;
+}
+
+.menu-font {
+    width: 100px;
+    height: 60px;
+    background-position: 50% 90%;
 }
 
 .menu-fonts {
     display: flex;
+    justify-content: space-around;
 }
 
 .menu-font p {
@@ -29,6 +43,34 @@
     font-family: "Georgia", serif;
 }
 
+.menu-text-control {
+    display: flex;
+    justify-content: space-between;
+}
+
+.menu-text-smaller, .menu-text-larger {
+    width: 80px;
+    height: 60px;
+    background-position: center;
+}
+
+.menu-label {
+    padding: 3.75px 16px;
+    align-self: center;
+    align-content: center;
+    border-radius: 12px;
+}
+
+.menu-color-scheme {
+    display: flex;
+    justify-content: space-around;
+}
+
+.menu-color {
+    width: 60px;
+    height: 40px;
+}
+
 .menu-light-button {
     background-color: #fff;
     color: #333;
@@ -36,7 +78,7 @@
 }
 
 .menu-dark-button {
-    background-color: #5c5c61;
+    background-color: #1c1b22;
     color: #eee;
     border: none;
 }
@@ -52,7 +94,7 @@
     background-color: white;
 }
 
-.menu-light .menu-button {
+.menu-light .menu-font {
     background-color: #edecf0;
 }
 
@@ -66,4 +108,8 @@
 
 .menu-light .menu-font-selected {
     background-color: var(--blue-40-a30);
+}
+
+.menu-light .menu-label {
+    background-color: #edecf0;
 }
