--- a/client/src/components/modules/Menu.css
+++ b/client/src/components/modules/Menu.css
@@ -1,10 +1,17 @@
 /* General */
+.menu-container {
+    height: 0;
+    z-index: 2;
+}
+
 .menu-controls {
     z-index: 1000;
     display: flex;
     flex-direction: column;
     align-content: center;
     width: 240px;
+    border: 1px solid rgba(0, 0, 0, 0.12);
+    box-shadow: 0px 0px 10px 0px rgba(49, 49, 49, 0.3);
 }
 
 .menu-button, .menu-font {
@@ -18,25 +25,39 @@
     background-color: transparent;
 }
 
-.menu-font {
-    width: 100px;
-    height: 60px;
-    background-position: 50% 90%;
-}
-
 .menu-fonts {
     display: flex;
     justify-content: space-around;
+    padding: 8px 0px;
 }
 
-.menu-font p {
-    line-height: 1em;
-    font-size: 36px;
-    margin: 0;
+.menu-font {
+    width: 100px;
+    height: 60px;
+    background-size: 54px 32px;
+    background-position: center 22px;
+    border: 2px solid rgba(0, 0, 0, 0.12);
 }
+
+.menu-font label {
+    position: relative;
+    top: -20px;
+}
+
+/* .menu-font, .menu-color {
+    padding-bottom: 2px;
+}
+
+.menu-font:hover, .menu-color:hover {
+    border-bottom: 2px solid var(--blue-40);
+    inset-inline-start: -2px;
+    bottom: 6px;
+    padding-bottom: 0px;
+} */
 
 .menu-font-selected {
     background-color: var(--blue-40-a30) !important;
+    border-color: var(--blue-40);
 }
 
 .menu-sans-serif p {
@@ -68,11 +89,17 @@
 .menu-color-scheme {
     display: flex;
     justify-content: space-around;
+    padding: 8px 0px;
 }
 
 .menu-color {
     width: 60px;
     height: 40px;
+    border: 2px solid rgba(0, 0, 0, 0.12) !important;
+}
+
+.menu-color-selected {
+    border-color: var(--blue-40) !important;
 }
 
 .menu-light-button {
@@ -99,8 +126,14 @@
     color: #333;
 }
 
+.menu-light .menu-fonts,
+.menu-light .menu-text-control {
+    border-bottom: 1px solid var(--grey-30);
+}
+
 .menu-light .menu-font {
     background-color: #edecf0;
+    color: #333;
 }
 
 .menu-light .menu-button:enabled:hover {
@@ -121,8 +154,14 @@
     color: #eee;
 }
 
+.menu-dark .menu-fonts,
+.menu-dark .menu-text-control {
+    border-bottom: 1px solid rgb(82, 82, 94);
+}
+
 .menu-dark .menu-font {
     background-color: #5c5c61;
+    color: #eee;
 }
 
 .menu-dark .menu-button:enabled:hover {
@@ -143,8 +182,14 @@
     color: #333;
 }
 
+.menu-sepia .menu-fonts,
+.menu-sepia .menu-text-control {
+    border-bottom: 1px solid var(--grey-30);
+}
+
 .menu-sepia .menu-font {
     background-color: #edecf0;
+    color: #333;
 }
 
 .menu-sepia .menu-button:enabled:hover {
