--- a/client/src/components/modules/Menu.css
+++ b/client/src/components/modules/Menu.css
@@ -1,6 +1,7 @@
 /* General */
 .menu-container {
     height: 0;
+    position: sticky;
     z-index: 2;
 }
 
@@ -12,6 +13,35 @@
     width: 240px;
     border: 1px solid rgba(0, 0, 0, 0.12);
     box-shadow: 0px 0px 10px 0px rgba(49, 49, 49, 0.3);
+    position: relative;
+    border-radius: 6px;
+}
+
+.menu-toggle:before,
+.menu-button:before {
+    position: relative;
+    /* top: 4px; */
+    /* inset-inline-start: 36px; */
+    line-height: 16px;
+    padding: 4px 8px;
+    visibility: hidden;
+    z-index: 1001;
+    white-space: pre;
+}
+
+.menu-toggle:hover:before,
+.menu-button:hover:before {
+    visibility: visible;
+}
+
+.menu-toggle {
+    width: 48px;
+    height: 48px;
+    background-size: 27px 16px;
+    background-position: center;
+    background-repeat: no-repeat;
+    padding: 0;
+    border-radius: 6px;
 }
 
 .menu-button, .menu-font {
@@ -124,6 +154,15 @@
 .menu-light {
     background-color: white;
     color: #333;
+}
+
+.page-container-light .menu-toggle {
+    background-color: white;
+    border: 2px solid rgba(0, 0, 0, 0.12);
+}
+
+.page-container-light .menu-toggle:hover {
+    background-color: hsla(0,0%,70%,.4);
 }
 
 .menu-light .menu-fonts,
