scuffed but technically working table support

--- a/client/src/components/modules/Reader.css
+++ b/client/src/components/modules/Reader.css
@@ -60,3 +60,20 @@
 .newline {
     white-space: pre-line;
 }
+
+/* Tables */
+table {
+    overflow-x: scroll;
+    display: block;
+}
+
+table, th, td {
+    border: 1px solid currentColor;
+    border-collapse: collapse;
+    padding: 6px;
+    vertical-align: top;
+}
+
+th {
+    font-weight: bold;
+}
