url form layout?

--- a/client/src/utilities.css
+++ b/client/src/utilities.css
@@ -9,6 +9,8 @@
     --grey-30: #94949E;
     --blue-40: #2994FF;
     --blue-40-a30: rgba(69, 161, 255, 0.3);
+    --blue-40-a50: rgba(69, 161, 255, 0.5);
+    --blue-40-a70: rgba(69, 161, 255, 0.7);
     --blue-60: #024db0;
 }
 
