--- a/client/src/components/modules/Menu.css
+++ b/client/src/components/modules/Menu.css
@@ -124,7 +124,8 @@
     padding: 3.75px 16px;
     align-self: center;
     align-content: center;
-    border-radius: 12px;
+    font-size: 18px;
+    border-radius: 18px;
 }
 
 .menu-color-scheme {
@@ -138,6 +139,7 @@
     width: 60px;
     height: 40px;
     border: 2px solid var(--popup-border) !important;
+    font-size: 18px;
 }
 
 .menu-color-selected {
